<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:background="@color/white">

    <TextView
        android:labelFor="@+id/lblSettings_Yaw"
        android:layout_width="@dimen/dimen_400"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/settings_yaw"
        android:textColor="#000"
        android:textAlignment="textEnd"
        android:textSize="@dimen/text_size_30" />

    <TextView
        android:labelFor="@+id/lblSettings_Alt"
        android:layout_width="@dimen/dimen_400"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/settings_alt"
        android:textColor="#000"
        android:textAlignment="textEnd"
        android:textSize="@dimen/text_size_30"/>

    <TextView
        android:labelFor="@+id/lblSettings_Deg"
        android:layout_width="@dimen/dimen_400"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/settings_deg"
        android:textColor="#000"
        android:textAlignment="textEnd"
        android:textSize="@dimen/text_size_30" />

    <TextView
        android:labelFor="@+id/lblSettings_TurnSpd"
        android:layout_width="@dimen/dimen_400"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:text="@string/settings_spd"
        android:textColor="#000"
        android:textAlignment="textEnd"
        android:textSize="@dimen/text_size_30" />

    <TextView
        android:labelFor="@+id/lblSettings_ChkDur"
        android:layout_width="@dimen/dimen_400"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:text="@string/settings_dur"
        android:textColor="#000"
        android:textAlignment="textEnd"
        android:textSize="@dimen/text_size_30" />

    <EditText android:id="@id/lblSettings_Yaw"
        android:layout_width="@dimen/dimen_100"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_50"
        android:layout_row="0"
        android:layout_column="1"
        android:textColor="#000"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_30"
        android:inputType="number" />

    <EditText android:id="@id/lblSettings_Alt"
        android:layout_width="@dimen/dimen_100"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_50"
        android:layout_row="1"
        android:layout_column="1"
        android:textColor="#000"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_30"
        android:inputType="number"/>

    <EditText android:id="@id/lblSettings_Deg"
        android:layout_width="@dimen/dimen_100"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_50"
        android:layout_row="2"
        android:layout_column="1"
        android:textColor="#000"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_30"
        android:inputType="number"/>

    <EditText android:id="@id/lblSettings_TurnSpd"
        android:layout_width="@dimen/dimen_100"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_50"
        android:layout_row="3"
        android:layout_column="1"
        android:textColor="#000"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_30"
        android:inputType="number"/>

    <EditText android:id="@id/lblSettings_ChkDur"
        android:layout_width="@dimen/dimen_100"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_50"
        android:layout_row="4"
        android:layout_column="1"
        android:textColor="#000"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_30"
        android:inputType="number"/>
</GridLayout>